# multiview

./: .env.example  .gitignore  LICENSE  README.md  SOCIAL_MEDIA_KIT.md  pyproject.toml  setup.cfg
demo/: output.txt  vulnerable_app.py
docs/: CASE-STUDY-multimodel-code-review.md  SOW-template.md
src/multiview/: __init__.py  ask_engine.py  cli.py  config.py  engine.py  output.py
