[metadata]
name = multiview
version = 0.1.0
description = Multi-model AI code review from your terminal

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    litellm>=1.40.0
    click>=8.0
    pyyaml>=6.0
    rich>=13.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    multiview = multiview.cli:main
